# data-science-auto-batch

./: .gitignore  Dockerfile  Dockerfile.nginx  Makefile  README.md  cookiecutter.json   docker-compose.yml  pyproject.toml
config/examples/ml/: elastic-binary-tree-classification.json  xgb-classification.json  xgboost.json
data/mlflow/: README.md
docker/app/: Dockerfile
examples/: california_housing.py  sk_breast_cancer.py  sk_california_housing.py  xgb_breast_cancer.py  xgb_california_housing.py
k8s/mlflow/: deployment.yaml  service.yaml
src/data/: engineer.py  extract.py  utils.py
src/ml/: train.py
