[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.2"
pyskoptimize = "^0.1.3"
xgboost = "1.5.0"
plotly = "^5.8.0"
matplotlib = "^3.5.2"
mlflow = "^1.25.1"
apache-airflow = "^2.3.0"
boto3 = "^1.23.0"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
